--- a/src/commands/transform.yml
+++ b/src/commands/transform.yml
@@ -9,6 +9,7 @@ parameters:
     type: string
     default: "/tmp/test-results"
   pattern:
+    description: Specify pattern to include by regular expression
     type: string
     default: ".*"
   when:
