--- a/src/commands/execute-and-evaluate.yml
+++ b/src/commands/execute-and-evaluate.yml
@@ -54,6 +54,7 @@ steps:
   - set-analysis-result-paths:
       analysis-results-path: << parameters.analysis-results-path >>
   - steps: << parameters.calculate >>
+  - restore_comment-fingerprints
   - evaluate:
       analysis-results-path: << parameters.analysis-results-path >>
       pattern: '.*/([0-9]+-|)DELTA-analysis-result\.xml$'
@@ -67,3 +68,4 @@ steps:
       analysis-results-path: << parameters.analysis-results-path >>
       pattern: '.*/([0-9]+-|)DELTA-analysis-result\.xml$'
       vcs-api-token: << parameters.vcs-api-token >>
+  - save_comment-fingerprints
