--- a/src/executors/calculator.yml
+++ b/src/executors/calculator.yml
@@ -4,5 +4,11 @@ parameters:
     description: Specify the image used to execute the analysis
     type: string
     default: circleci/node
+  analysis-results-path:
+    description: Specify the path to save the analysis results if you need to change it
+    type: string
+    default: "/tmp/dscar/analysis-results"
 docker:
   - image: << parameters.docker-image >>
+environment:
+  DSCAR_ANALYSIS_RESULTS_PATH: << parameters.analysis-results-path >>
