--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -3,7 +3,10 @@ version: 2.1
 description: |
   Delta Static Code Analysis Reports running on CircleCI
 
-  This Orb calculates the difference between two static code analysis results. However, the format of the static code analysis result must be Checkstyle XML. Using this Orb, you can get the static code analysis result for the update difference between HEAD branch and its BASE branch.
+  This Orb calculates the difference between two static code analysis results.
+  However, the format of the static code analysis result must be Checkstyle XML.
+  Using this Orb, you can get the static code analysis result for the update
+  difference between HEAD branch and its BASE branch.
 
 display:
   home_url: https://github.com/naokikimura/dscar
